# elapsedtimer

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.rst  elapsedtimer.py  pyproject.toml  setup.cfg  setup.py  test_elapsedtimer.py
.github/workflows/: build-and-test.yaml
src/: elapsedtimer.py
test/: test_elapsedtimer.py
