[metadata]
name = elapsedtimer
version = 1.0.0
description = Elapsed timer and utilities
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Chris Reed
maintainer_email = flit@me.com
url = https://github.com/flit/elapsedtimer
keywords = time, performance, optimize, utility
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Website = https://github.com/flit/elapsedtimer
    Documentation = https://github.com/flit/elapsedtimer
    Source = https://github.com/flit/elapsedtimer

[options]
zip_safe = True
package_dir =
    =src
;packages = find:
py_modules = elapsedtimer
python_requires = >=3.6.0

[options.extras_require]
test =
    pytest>=6.2
    flake8>=4.0
